<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_gridview_item"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:cardElevation="@dimen/cardElevation"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Milk"
            android:orientation="vertical"
            android:padding="@dimen/padding_text">

            <TextView
                android:id="@+id/nameItemTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Blue"
                android:textSize="@dimen/textSizeTitle_item"
                android:textStyle="bold"
                android:hint="@string/nameItemTV_Hint"
                android:textColorHint="@color/Grey"></TextView>
            <TextView
                android:id="@+id/priceItemTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Blue"
                android:textSize="@dimen/textSize_item"
                android:hint="@string/priceItemTV_Hint"
                android:textColorHint="@color/Grey"></TextView>
            <TextView
                android:id="@+id/weightItemTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Blue"
                android:textSize="@dimen/textSize_item"
                android:hint="@string/weightItemTV_Hint"
                android:textColorHint="@color/Grey"></TextView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>